[tool.poetry]
name = "crystal-maiden-discord-bot"
version = "0.1.0"
description = ""
authors = ["Rahul D Shetty 35rahuldshetty@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
Flask = "^2.2.0"
"discord.py" = "^2.3.2"
discord = "^2.3.2"
python-dotenv = "^0.21.0"
horde-client = "^1.0.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"